Fix Dark Mode for square icons
Summary:
Do not hardcode white color; use a variable instead so there is sufficient contrast in Dark Mode.

Refs T15056

Test Plan: Create a Dashboard; go to http://phorge.localhost/dashboard/query/all/ and look at the list

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26421

--- a/webroot/rsrc/css/phui/phui-icon.css
+++ b/webroot/rsrc/css/phui/phui-icon.css
@@ -172,7 +172,7 @@ a.phui-icon-circle.hover-red:hover .phui-icon-view {
 .phui-icon-view.phui-icon-square {
   height: 40px;
   width: 40px;
-  color: #fff;
+  color: {$page.content};
   font-size: 26px;
   text-align: center;
   line-height: 38px;
@@ -181,7 +181,7 @@ a.phui-icon-circle.hover-red:hover .phui-icon-view {
 
 a.phui-icon-view.phui-icon-square:hover {
   text-decoration: none;
-  color: #fff;
+  color: {$page.content};
 }
 
 
